Bug 360184 Accessible row/column and row/column header of tables are incorrect patch by Evan.Yan@sun.com r=aaronleventhal